--- a/src/components/CompatSection.astro
+++ b/src/components/CompatSection.astro
@@ -231,40 +231,40 @@ const compats = collectCompat(Astro.props.feature, 0);
   }
 
   .icon-logo-bun::after {
-    mask-image: url(/public/logos/bun.svg);
+    mask-image: url(/logos/bun.svg);
   }
 
   .icon-logo-deno::after {
-    mask-image: url(/public/logos/deno.svg);
+    mask-image: url(/logos/deno.svg);
     mask-mode: luminance;
   }
 
   .icon-logo-nodejs::after {
-    mask-image: url(/public/logos/nodejs.svg);
+    mask-image: url(/logos/nodejs.svg);
   }
 
   .icon-logo-esbuild::after {
-    mask-image: url(/public/logos/esbuild.svg);
+    mask-image: url(/logos/esbuild.svg);
     mask-mode: luminance;
   }
 
   .icon-logo-rsbuild::after {
-    mask-image: url(/public/logos/rsbuild.svg);
+    mask-image: url(/logos/rsbuild.svg);
     mask-mode: luminance;
   }
 
   .icon-logo-rspack::after {
-    mask-image: url(/public/logos/rspack.svg);
+    mask-image: url(/logos/rspack.svg);
     mask-mode: luminance;
   }
 
   .icon-logo-vite::after {
-    mask-image: url(/public/logos/vite.svg);
+    mask-image: url(/logos/vite.svg);
     mask-mode: luminance;
   }
 
   .icon-logo-webpack::after {
-    mask-image: url(/public/logos/webpack.svg);
+    mask-image: url(/logos/webpack.svg);
     mask-mode: luminance;
   }
 </style>
