--- a/src/components/CompatSection.astro
+++ b/src/components/CompatSection.astro
@@ -203,69 +203,69 @@ const compats = collectCompat(Astro.props.feature, 0);
 
   .support-supported {
     color: var(--text-primary-green);
-  }
 
-  .support-supported > .icon.icon-support::after {
-    mask-image: var(--icon-check);
+    & > .icon.icon-support {
+      --icon__image: var(--icon-check);
+    }
   }
 
   .support-unsupported {
     color: var(--text-primary-red);
+
+    & > .icon.icon-support {
+      --icon__image: var(--icon-x);
+      --icon__color: var(--text-primary-red);
+    }
   }
 
-  .support-unsupported > .icon.icon-support::after {
-    mask-image: var(--icon-x);
-    background-color: var(--text-primary-red);
+  .status-experimental {
+    --icon__image: var(--icon-experimental);
   }
 
-  .status-experimental::after {
-    mask-image: var(--icon-experimental);
-  }
-
-  .icon.icon-notes::after {
-    mask-image: var(--icon-asterisk);
+  .icon.icon-notes {
+    --icon__image: var(--icon-asterisk);
   }
 
   .platform-logo {
     margin-bottom: 0.3rem;
   }
 
-  .icon-logo-bun::after {
-    mask-image: url(/logos/bun.svg);
+  .icon-logo-bun {
+    --icon__image: url(/logos/bun.svg);
   }
 
-  .icon-logo-deno::after {
-    mask-image: url(/logos/deno.svg);
-    mask-mode: luminance;
+  .icon-logo-deno {
+    --icon__image: url(/logos/deno.svg);
+    --icon__mode: luminance;
   }
 
-  .icon-logo-nodejs::after {
-    mask-image: url(/logos/nodejs.svg);
+  .icon-logo-nodejs {
+    --icon__image: url(/logos/nodejs.svg);
   }
 
-  .icon-logo-esbuild::after {
-    mask-image: url(/logos/esbuild.svg);
-    mask-mode: luminance;
+  .icon-logo-esbuild {
+    --icon__image: url(/logos/esbuild.svg);
+    --icon__mode: luminance;
   }
 
-  .icon-logo-rsbuild::after {
-    mask-image: url(/logos/rsbuild.svg);
-    mask-mode: luminance;
+  .icon-logo-rsbuild {
+    --icon__image: url(/logos/rsbuild.svg);
+    --icon__mode: luminance;
   }
 
-  .icon-logo-rspack::after {
-    mask-image: url(/logos/rspack.svg);
-    mask-mode: luminance;
+  .icon-logo-rspack {
+    --icon__image: url(/logos/rspack.svg);
+    --icon__mode: luminance;
   }
 
-  .icon-logo-vite::after {
-    mask-image: url(/logos/vite.svg);
-    mask-mode: luminance;
+  .icon-logo-vite {
+    --icon__image: url(/logos/vite.svg);
+    --icon__mode: luminance;
   }
 
-  .icon-logo-webpack::after {
-    mask-image: url(/logos/webpack.svg);
-    mask-mode: luminance;
+  .icon-logo-webpack {
+    --icon__image: url(/logos/webpack.svg);
+    --icon__mode: luminance;
   }
 </style>
 <h2>Bundler compatibility</h2>
